订单详情页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="darna_janet">Kim Torres</string>
     <string name="makati_medi">Makati Medical Center</string>
     <string name="sep_19_2020">Feb 10, 2021 10:00 am</string>
+    <string name="hospital">Hospital</string>
 </resources>
